Bug 1661120 - Set a higher z-index value on the dialogStack. r=dao
Differential Revision: https://phabricator.services.mozilla.com/D88221

UltraBlame original commit: ef2f4122bb76847c8d5da8d8033d53995694d6fa

--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -1444,6 +1444,12 @@ toolbar[keyNav=true]:not([collapsed=true]):not([customizing=true]) toolbartabsto
 
 
 
+.dialogStack {
+  
+
+  z-index: 2;
+}
+
 .dialogOverlay {
   visibility: hidden;
 }
